# aciujums

./: .gitignore  PLAN.md  README.md  app.ipynb  fix_state.py  package-lock.json  package.json  pyproject.toml  savivaldybes.ipynb  sst.config.ts  sst.pyi  vmi.ipynb
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  dockerfile
.github/workflows/: deploy-dev.yml  deploy-prod.yml
.sst/: esbuild.json  outputs.json
.sst/artifacts/AciujumsApiRouteBvcwahHandler-src/: bundle.mjs  bundle.mjs.map
.sst/artifacts/AciujumsApiRouteCnszxtHandler-src/: bundle.mjs  bundle.mjs.map
.sst/artifacts/AciujumsApiRouteDrnnvfHandler-src/: bundle.mjs  bundle.mjs.map
.sst/artifacts/AciujumsApiRouteMswwvfHandler-src/: bundle.mjs  bundle.mjs.map
.sst/artifacts/AciujumsApiRouteZuffzrHandler-src/: bundle.mjs  bundle.mjs.map
.sst/platform/: bun.lockb  package.json
aciujums/: .gitignore  next.config.mjs  package-lock.json  package.json  sst-env.d.ts  sst.config.ts  tailwind.config.js
aciujums.egg-info/: PKG-INFO  SOURCES.txt
aciujums/src/app/: page.js  (+6 more)
aws-export/apigateway/: http-apis-eu-central-1.json
aws-export/dynamodb/: tables-eu-central-1.json  tables-us-east-1.json
aws-export/eventbridge/: SSTBootstrap-MetadataRule1BDDB4A9-dBq8DSNBtQrr-targets.json  eu-central-1__monthly-trigger-2-targets.json  eu-central-1__monthly-trigger-targets.json  rules-eu-central-1.json  rules.json  trigger-vmi-processing-targets.json
aws-export/lambdas/: _all-functions-eu-central-1.json  _all-functions.json
aws-export/s3/: buckets.json
functions/sync/: index.mjs
(+652 files in other folders)
