[project]
name = "aciujums"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "functions/processors/vmi-processor",
    "functions/processors/rc-processor",
    "functions/validators/check-csv-structure",
    "functions/validators/check-vmi-file-date",
    "functions/alerts/send-alert",
]
